--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,133 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Remind Me.io</title>
+  </head>
+  <body class="bg-dark">
+    <header
+      class="
+        container-fluid
+        d-flex
+        justify-content-center
+        bg-dark
+        text-light
+        mt-4
+      "
+    >
+      <h1 class="display-5">Remind Me</h1>
+    </header>
+
+    <main
+      class="container-fluid d-flex flex-column w-75 h-100 align-items-center"
+    >
+      <div class="container d-flex justify-content-center">
+        <button
+          type="button"
+          class="newEvent"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseExample"
+          aria-expanded="false"
+          aria-controls="collapseExample"
+        >
+          <h3 class="lead text-light newEventText">Novo evento</h3>
+        </button>
+      </div>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body" style="width: 400px">
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            placeholder="Título"
+          />
+          <br />
+          <input
+            type="text"
+            class="form-control"
+            id="desc"
+            placeholder="Descriçao"
+          />
+          <br />
+          <input
+            type="date"
+            class="form-control"
+            id="date"
+            placeholder="Data"
+          />
+          <br />
+          <span>Prioridade:</span>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio1"
+              value="option1"
+            />
+            <label
+              class="form-check-label btn-outline-success"
+              for="inlineRadio1"
+              >Light</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio2"
+              value="option2"
+            />
+            <label
+              class="form-check-label btn-outline-warning"
+              for="inlineRadio2"
+              >Medium</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio3"
+              value="option3"
+            />
+            <label
+              class="form-check-label btn-outline-danger"
+              for="inlineRadio3"
+              >Extreme</label
+            >
+          </div>
+          <button
+            type="button"
+            class="newEvent"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseExample"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+            onclick=""
+          >
+            <h4 class="lead text-dark newEventText">Salvar</h4>
+          </button>
+        </div>
+      </div>
+    </main>
+
+    <footer></footer>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"
+  ></script>
 </html>
