cards e route all

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         </button>
       </div>
       <div class="collapse" id="collapseExample">
-        <div class="card card-body" style="width: 400px">
+        <div class="card card-body mb-3 shadow-sm" style="width: 400px">
           <input
             type="text"
             class="form-control"
@@ -72,7 +72,7 @@
               type="radio"
               name="inlineRadioOptions"
               id="inlineRadio1"
-              value="option1"
+              value="success"
             />
             <label
               class="form-check-label btn-outline-success"
@@ -86,7 +86,7 @@
               type="radio"
               name="inlineRadioOptions"
               id="inlineRadio2"
-              value="option2"
+              value="warning"
             />
             <label
               class="form-check-label btn-outline-warning"
@@ -100,7 +100,7 @@
               type="radio"
               name="inlineRadioOptions"
               id="inlineRadio3"
-              value="option3"
+              value="danger"
             />
             <label
               class="form-check-label btn-outline-danger"
@@ -115,16 +115,22 @@
             data-bs-target="#collapseExample"
             aria-expanded="false"
             aria-controls="collapseExample"
-            onclick=""
+            onclick="newPost()"
           >
             <h4 class="lead text-dark newEventText">Salvar</h4>
           </button>
         </div>
       </div>
+
+      <section id="mural" class="w-50 overflow-auto container-fluid d-flex flex-column align-items-center bg-dark">
+  
+      </section>
+
     </main>
 
     <footer></footer>
   </body>
+  <script src="script.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
